# expense-tracker-sre

./: .dockerignore  .env.example  .gitignore  .gitignore.md  .gitleaks.toml  Dockerfile  README.md  alembic.ini  backup.py  ci.yml  cli.py  docker-compose.yml  errors.py  expenses-example.csv  expenses.py  init.sql  logging_logic.py  main.py  pyproject.toml  requirements.txt  storage.py  test_expenses.py
.github/workflows/: ci.yml
deploy/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  prometheus.yml
migrations/: env.py
migrations/versions/: 72f0f3d80ec1_initial_schema_with_expenses_and_api_.py
scripts/: cli.py
src/expense_tracker/: main.py
src/expense_tracker/api/routes/: admin.py  expenses.py
src/expense_tracker/core/: auth.py  errors.py  logging.py
src/expense_tracker/db/: session.py
src/expense_tracker/models/: api_key.py  expense.py
src/expense_tracker/schemas/: expense.py
src/expense_tracker/services/: backup_service.py  expense_service.py
tests/: conftest.py  test_expenses.py
